--- a/src/main/resources/templates/fragments/modalProyect.html
+++ b/src/main/resources/templates/fragments/modalProyect.html
@@ -8,43 +8,13 @@
       <form  id="modal-task" class="space-y-4">
         <!-- Nombre -->
         <div>
-          <label for="name" class="block text-gray-700">Nombre Del Proyecto</label>
+          <label for="name" class="block text-gray-700">Abreviatura</label>
           <input type="text" id="name" name="name" class="w-full p-2 border border-gray-300 rounded" required>
         </div>
-
-        <!-- Fecha de Creación -->
-        <!--        <div>
-                  <label for="creation_date" class="block text-gray-700">Fecha de Creación</label>
-                  <input type="date" id="creation_date" name="creation_date" class="w-full p-2 border border-gray-300 rounded" th:disabled="true">
-                </div>-->
-
-        <!-- Fecha Última Actualización -->
-        <!--  <div>
-            <label for="last_update_date" class="block text-gray-700">Fecha Última Actualización</label>
-            <input type="date" id="last_update_date" name="last_update_date" class="w-full p-2 border border-gray-300 rounded" th:disabled="true">
-          </div>-->
-
-        <!-- Estado -->
-        <!--<div>
-          <label for="status" class="block text-gray-700">Estado</label>
-          <select id="status" name="status" class="w-full p-2 border border-gray-300 rounded">
-            <option value="pendiente">Pendiente</option>
-            <option value="en_proceso">En Proceso</option>
-            <option value="completada">Completada</option>
-          </select>
-        </div>
-
-        &lt;!&ndash; Horas &ndash;&gt;
         <div>
-          <label for="horas" class="block text-gray-700">Horas Estimadas</label>
-          <input type="number" id="horas" name="horas" class="w-full p-2 border border-gray-300 rounded" required>
+          <label for="lastName" class="block text-gray-700">Nombre Del Proyecto</label>
+          <input type="text" id="lastName" name="name" class="w-full p-2 border border-gray-300 rounded" required>
         </div>
-
-        &lt;!&ndash; Descripción &ndash;&gt;
-        <div>
-          <label for="description" class="block text-gray-700">Descripción</label>
-          <textarea id="description" name="description" rows="4" class="w-full p-2 border border-gray-300 rounded" required></textarea>
-        </div>-->
 
         <!-- Botones -->
         <div class="flex justify-end space-x-4">
