--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -4,7 +4,7 @@
   <!-- Modal -->
   <div id="taskModal"
        class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
-    <div class="bg-white p-8 rounded-lg w-1/2">
+    <div class="bg-white p-8 rounded-lg lg:w-1/2">
       <h2 class="text-xl font-semibold mb-4">Agregar Tarea</h2>
       <form  id="modal-task" class="space-y-4">
         <!-- Nombre -->
@@ -23,7 +23,14 @@
             </select>
           </div>
 
-
+          <div class="w-1/2">
+            <label for="tipo" class="block text-gray-700">Tipo tarea</label>
+            <select id="tipo" name="status" class="w-full p-2 border border-gray-300 rounded">
+              <th:block th:each="type : ${tasktypes}">
+                <option th:value="${type.id}" th:text="${type.name}"></option>
+              </th:block>
+            </select>
+          </div>
           <!-- Segundo input: Proyecto -->
           <div class="w-1/2">
 
@@ -33,16 +40,6 @@
         </div>
 
         <div class="flex space-x-4">
-          <!-- Primer select: Responsable
-          <div class="w-1/2">
-            <label for="user" class="block text-gray-700 font-semibold mb-2">Responsable</label>
-            <select id="user" name="user" class="w-full p-3 border-2 border-gray-300 rounded-lg bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm appearance-none h-40" multiple required>
-              <th:block th:each="user : ${users}">
-                <option th:value="${user.id}" th:text="${user.username}"></option>
-              </th:block>
-            </select>
-          </div>
-          -->
           <div class="w-1/2">
             <label for="user" class="block text-gray-700">Responsable</label>
             <select id="user" name="user" multiple class="w-full  rounded-lg bg-gray-50 focus:ring-blue-500 shadow-sm appearance-none"
@@ -52,7 +49,6 @@
               </th:block>
             </select>
           </div>
-
 
           <!-- Segundo input: Horas Estimadas -->
           <div class="w-1/2">
