--- a/src/main/resources/templates/fragments/table.html
+++ b/src/main/resources/templates/fragments/table.html
@@ -1,33 +1,48 @@
 <div th:fragment="TaskTable">
 
         <div class="relative overflow-x-auto rounded-lg border border-gray-200 dark:border-gray-700">
-            <table class="w-full text-sm text-left rtl:text-right text-gray-700 dark:text-gray-300">
-                <thead class="text-xs font-semibold uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
+            <table class="w-full text-sm lg:text-xs text-left rtl:text-right text-gray-700 dark:text-gray-300">
+                <thead class="text-sm lg:text-xs font-semibold uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
                     <th scope="col" class="px-6 py-3">Nombre</th>
                     <th scope="col" class="px-6 py-3">Responsable</th>
                     <th scope="col" class="px-6 py-3">Estado</th>
+                    <th scope="col" class="px-6 py-3">tipo tarea</th>
                     <th scope="col" class="px-6 py-3">horas</th>
                     <th scope="col" class="px-6 py-3">Fecha de Creación</th>
                     <th scope="col" class="px-6 py-3">Acciones</th>
+<!--                    <th scope="col" class="px-6 py-3">Tipo</th>-->
+
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="task : ${tasks}"
                     class="bg-white dark:bg-gray-800 border-b dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-700">
                     <th scope="row"
-                        class="px-6 py-4 font-medium text-gray-900 dark:text-white whitespace-nowrap overflow-hidden text-ellipsis max-w-xs"
+                        class="px-6 py-4 font-medium text-gray-900 dark:text-white whitespace-nowrap overflow-hidden text-ellipsis "
+                        style="max-width: 16rem;"
                     th:text="${task.name}"
                     >
                     </th>
-                    <td class="px-6 py-4"><span class="px-2 py-1 text-xs font-semibold rounded-lg bg-red-100 text-red-700 dark:bg-red-800 dark:text-red-200"
-                    >Temporalmente inhabitado</span></td>
+                    <td class="px-6 py-4 w-auto max-w-3xs">
+                        <div class="flex gap-1 overflow-x-auto max-w-[200px] whitespace-nowrap scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-100">
+                            <span th:each="responsable : ${task.responsables}"
+                                  class="px-2 py-1 text-xs font-semibold rounded-lg bg-indigo-500 text-white dark:bg-red-800 dark:text-red-200">
+                                <span th:text="${responsable}"></span>
+                            </span>
+                        </div>
+                    </td>
+
+
                     <td class="px-6 py-4">
                             <span th:text="${task.status}"
                                   class="px-2 py-1 text-xs font-semibold rounded-lg"
                                   th:classappend="${task.status == 'Completada' ? 'bg-green-100 text-green-700 dark:bg-green-800 dark:text-green-200' :
                                                    task.status == 'En Progreso' ? 'bg-yellow-100 text-yellow-700 dark:bg-yellow-800 dark:text-yellow-200' :
                                                    'bg-red-100 text-red-700 dark:bg-red-800 dark:text-red-200'}"></span>
+                    </td>     <td class="px-6 py-4">
+                            <span th:text="${task.type}"
+                                  class="px-2 py-1 text-xs font-semibold rounded-lg bg-indigo-500 text-white dark:bg-green-800 dark:text-green-200"></span>
                     </td>
                     <td class="px-6 py-4">
                         <span class="text-sm font-medium text-gray-700" th:text="${task.horas}">0</span>
@@ -35,18 +50,16 @@
                     <td class="px-6 py-4" th:text="${#dates.format(task.creationDate, 'dd/MM/yyyy')}"></td>
                     <td class="px-6 py-4 text-right">
                         <a href="#" th:href="@{'/proyectos/' + ${filtro} + '/edit/' + ${task.id}}"
-                           class="inline-block px-3 py-1 text-sm font-medium text-white bg-blue-500 rounded-lg hover:bg-blue-600 dark:bg-blue-600 dark:hover:bg-blue-700">
-                            Editar
+                           class="inline-block mb-1 px-3 py-1 text-sm font-medium text-blue-500 border border-blue-500 rounded-lg hover:bg-blue-500 hover:text-white dark:border-blue-600 dark:text-blue-600 dark:hover:bg-blue-600 dark:hover:text-white">
+                            Detail
                         </a>
 
                         <button type="button" th:attr="onclick='completeTask(' + ${task.id} + ')'"
-                                class="inline-block px-3 py-1 text-sm font-medium text-white bg-green-500 rounded-lg hover:bg-green-600 dark:bg-green-600 dark:hover:bg-green-700">
+                                class="inline-block px-3 py-1 text-sm font-medium text-green-500 border border-green-500 rounded-lg hover:bg-green-500 hover:text-white dark:border-green-600 dark:text-green-600 dark:hover:bg-green-600 dark:hover:text-white">
                             Completar
                         </button>
-
-
-
                     </td>
+<!--                    <td class="px-6 py-4" th:text="${task.type}"></td>-->
 
                     <script>
                         function completeTask(taskId) {
@@ -82,26 +95,16 @@
                 </tbody>
             </table>
             <div class="flex flex-col items-center">
-                <!-- Help text -->
-<!--                <span class="text-sm text-gray-700 dark:text-gray-400">Showing-->
-<!--                <span id="start" class="font-semibold text-gray-900 dark:text-white">1</span> to-->
-<!--                <span id="end" class="font-semibold text-gray-900 dark:text-white">10</span> of-->
-<!--                <span id="total" class="font-semibold text-gray-900 dark:text-white">100</span> Entries-->
-<!--                </span>-->
                 <div class="inline-flex mt-2 xs:mt-0 space-x-2">
-                    <!-- Prev Button -->
                     <button id="prevButton"
-                            class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-800 rounded-l-md hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white transition-all duration-200">
+                            class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-800 rounded-md hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white transition-all duration-200">
                         <svg class="w-4 h-4 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
                         </svg>
-                        Prev
                     </button>
 
-                    <!-- Next Button -->
                     <button id="nextButton"
-                            class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-800 border-0 rounded-r-md hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white transition-all duration-200">
-                        Next
+                            class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-800 border-0 rounded-md hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white transition-all duration-200">
                         <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                         </svg>
@@ -114,36 +117,30 @@
 
     <script>
         window.onload = function() {
-            // Check if the URL contains '/edit/' to trigger modal opening
+
             if (window.location.href.includes("/edit/")) {
                 openModal();
             }
 
-            // Function to open the modal
             function openModal() {
                 const modal = document.getElementById('taskModalUpdate');
                 modal.classList.remove('hidden'); // Show the modal
             }
 
-            // Function to close the modal and remove '/edit/{id}' from the URL
             document.getElementById('closeModal').addEventListener('click', function() {
                 const modal = document.getElementById('taskModalUpdate');
                 modal.classList.add('hidden'); // Hide the modal
 
-                // Remove '/edit/{id}' from the URL using history.pushState()
                 history.pushState(null, '', window.location.pathname);
             });
 
-            // Handle scenario where the modal might be hidden unexpectedly
-            // if (!document.getElementById('taskModalUpdate').classList.contains('hidden') && window.location.href.includes("/edit/")) {
-            //     history.pushState(null, '', window.location.pathname); // Remove '/edit/{id}' if modal is hidden
-            // }
+
         }
         document.getElementById('nextButton').addEventListener('click', function() {
             let currentUrl = window.location.href;
             let url = new URL(currentUrl);
             let pageParam = url.searchParams.get('page');
-            pageParam = pageParam ? parseInt(pageParam) : 1;
+            pageParam = pageParam ? parseInt(pageParam) : 0;
             let nextPage = pageParam + 1;
             url.searchParams.set('page', nextPage);
             window.location.href = url.toString();
