--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,26 +20,26 @@
     }
 
 </style>
-<div th:replace="fragments/nav/Slidebar :: slidebar"></div>
+<div th:replace="~{fragments/nav/Slidebar :: slidebar}"></div>
 
 <div class="fixed top-4 right-4 z-50">
-    <div th:replace="fragments/alert/succes :: SuccessAlert"></div>
+    <div th:replace="~{fragments/alert/succes :: SuccessAlert}"></div>
 </div>
 <div class="fixed top-4 right-4 z-50">
-    <div th:replace="fragments/alert/error :: ErrorAlert"></div>
+    <div th:replace="~{fragments/alert/error :: ErrorAlert}"></div>
 </div>
 
-<div class="m-6 px-32">
+<div class="m-6 pl-16 lg:px-32">
     <header class="container mx-auto">
-      <h1 class="text-4xl font-bold p-8">Horas <span th:text="${filtro}"></span></h1>
+      <h1 class="text-3xl lg:text-4xl font-bold lg:p-8">Horas <span th:text="${filtro}"></span></h1>
     </header>
 
 
-    <div class="rounded-xl bg-gray-50 dark:bg-gray-800">
+    <div class="rounded-xl">
         <div class="flex justify-between items-center mb-4">
             <div class="flex space-x-2">
             </div>
-            <button id="openModal" class="px-4 py-2 text-white bg-blue-500 rounded hover:bg-blue-600 focus:outline-none my-2">
+            <button id="openModal" class="px-4 py-2 text-white bg-blue-500 rounded hover:bg-blue-600 focus:outline-none my-2  text-xs lg:text-lg">
                 Agregar Tarea
             </button>
 
@@ -51,33 +51,53 @@
             <!-- Responsable -->
             <div class="flex flex-col w-full sm:w-auto">
                 <label for="responsable" class="text-sm font-medium text-gray-700 dark:text-gray-300">Responsable:</label>
-                <select id="responsable" name="responsable" class="block w-full p-2 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                    <option >Seleccione un responsable</option>
+                <select id="responsable" name="responsable"
+                        class="block p-2 text-gray-900 border border-gray-300 rounded-lg  focus:ring-blue-500
+                        focus:border-blue-500 w-40 lg:w-full  text-xs lg:text-sm">
+                        <option >Seleccione un responsable</option>
                     <th:block th:each="user : ${users}">
                         <option th:value="${user.username}" th:text="${user.username}"></option>
                     </th:block>
 
                 </select>
             </div>
+            <div class="flex flex-col w-full sm:w-auto">
+                <label for="estado" class="text-sm font-medium text-gray-700 dark:text-gray-300">Status:</label>
+                <select id="estado" name="estado"
+                        class="block p-2 text-gray-900 border border-gray-300 rounded-lg  focus:ring-blue-500
+                        focus:border-blue-500 w-40 lg:w-full  text-xs lg:text-sm">
+                        <option>Seleccione un estado</option>
+                        <option value="Completada" >Completada</option>
+                        <option value="pendiente">pendiente</option>
+                </select>
+            </div>
 
             <!-- Fecha de inicio -->
-            <div class="flex flex-col w-full sm:w-auto">
+            <div class="flex flex-col">
                 <label for="startDate" class="text-sm font-medium text-gray-700 dark:text-gray-300">Fecha de inicio:</label>
-                <input type="date" id="startDate" name="comienzo" class="block w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-gray-300 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                <input type="date" id="startDate" name="comienzo"
+                       class="block w-full px-4 py-2  border border-gray-300 rounded-lg bg-white
+                        focus:ring-blue-500 focus:border-blue-500 text-xs lg:text-sm">
             </div>
 
             <!-- Fecha de fin -->
-            <div class="flex flex-col w-full sm:w-auto">
+            <div class="flex flex-col">
                 <label for="endDate" class="text-sm font-medium text-gray-700 dark:text-gray-300">Fecha de fin:</label>
-                <input type="date" id="endDate" name="fin" class="block w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-gray-300 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                <input type="date" id="endDate" name="fin"
+                       class="block w-full px-4 py-2  border border-gray-300 rounded-lg bg-white
+                       focus:ring-blue-500 focus:border-blue-500 text-xs lg:text-sm">
             </div>
 
             <!-- Botones -->
             <div class="flex items-center gap-2">
-                <button type="submit" class="px-4 py-2 text-sm font-medium text-white bg-green-500 rounded-lg hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-400">
+                <button type="submit"
+                        class="px-4 py-2 text-xs lg:text-sm font-medium text-white bg-green-500 rounded-lg hover:bg-green-600
+                        focus:outline-none focus:ring-2 focus:ring-green-400">
                     Filtrar
                 </button>
-                <button onclick="clearFilters()" type="button" class="px-4 py-2 text-sm font-medium text-white bg-blue-500 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
+                <button onclick="clearFilters()" type="button"
+                        class="px-4 py-2 text-xs lg:text-sm font-medium text-white bg-blue-500 rounded-lg hover:bg-blue-600
+                        focus:outline-none focus:ring-2 focus:ring-blue-400">
                     Limpiar Filtro
                 </button>
             </div>
@@ -89,7 +109,7 @@
             function clearFilters() {
 
                 let currentUrl = window.location.href;
-                let newUrl = currentUrl.split('?comienzo')[0];
+                let newUrl = currentUrl.split('?responsable')[0];
                 window.location.href = newUrl;
             }
         </script>
@@ -120,6 +140,7 @@
     // Obtener valores de los campos del formulario
       const nameField = document.getElementById('name').value;
       const statusField = document.getElementById('status').value;
+      const tipo = document.getElementById('tipo').value;
       const proyectField = document.getElementById('proyect').value;
       const responsableField = document.getElementById('user');
       const selectedValues = Array.from(responsableField.selectedOptions).map(option => option.value); // Obtener IDs de los responsables seleccionados
@@ -134,39 +155,21 @@
           description: descriptionField,
           creationDate: Date.now(),
           last_update_date: Date.now(),
+          type:tipo,
           status: statusField,
           responsablesIds: selectedValues,
           horas: horasField
       };
 
-    // Enviar la solicitud POST a la API
+
       fetch('/api/task', {
           method: 'POST',
-          headers: {
-              'Content-Type': 'application/json'
-          },
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
       })
-          .then(response => {
-              if (response.ok) {
-                  return response.json();
-              } else {
-                  throw new Error('Error al guardar la tarea.');
-              }
-          })
-          .then(data => {
-              console.log('Tarea guardada:', data);
-              // Cerrar el modal después de guardar
-              document.getElementById("taskModal").classList.add("hidden");
-              // Opcional: Limpiar el formulario
-              ModalForm.reset();
-              window.location.reload();
+          .then(response => response.ok ? location.reload() : Promise.reject('Error al guardar la tarea.'))
+          .catch(error => alert(error));
 
-          })
-          .catch(error => {
-              throw new Error('Error al guardar la tarea.');
-              console.error('Error:', error);
-          });
   });
 
   document.addEventListener("DOMContentLoaded", function () {
